--- a/src/app/featured/dashbord/component/home/home.component.html
+++ b/src/app/featured/dashbord/component/home/home.component.html
@@ -1,8 +1,8 @@
 
+<app-header></app-header>
 <div class="main-wrapper">
-    <app-side-navigation class="sidebar"></app-side-navigation>
-<section class="content-area">
-    <app-header></app-header>
+    <app-side-navigation class="sidebar" id="mySidebar"></app-side-navigation>
+<section class="content-area">    
     <router-outlet></router-outlet>
 </section>
 </div>
