--- a/src/app/featured/dashbord/component/company-access/company-access.component.html
+++ b/src/app/featured/dashbord/component/company-access/company-access.component.html
@@ -1,6 +1,13 @@
 <section class="content-wrap">
-  <!-- <button class=" float-right btn btn-green" (click)="openAdd()">Add New</button> -->
-  <h1>Company Access</h1>
+  <section class="table-heading">
+    <!-- <button class=" float-right btn btn-green" (click)="openAdd()">Add New</button> -->
+    <div class="flex-wrap">
+      <h1>Company Access</h1>
+      <div class="form-group search-box search">
+        <input type="text" class="form-control" [(ngModel)]="searchText" placeholder="Search here...">
+      </div>
+    </div>
+  </section>
   <section class="table-wrap">
     <table class="table table-striped" *ngIf="companyAccess&&companyAccess.length>0">
       <thead>
@@ -63,7 +70,8 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let item of companyAccess| orderBy: {property: column, direction: direction};index as i">
+        <tr
+          *ngFor="let item of companyAccess| orderBy: {property: column, direction: direction}|filter:searchText;index as i">
           <td>{{item.UserID}}</td>
           <td>{{item.user_name}}</td>
           <td>{{item.CompanyID}}</td>
