--- a/src/app/featured/dashbord/component/cost-center-access/cost-center-access.component.html
+++ b/src/app/featured/dashbord/component/cost-center-access/cost-center-access.component.html
@@ -1,6 +1,13 @@
 <section class="content-wrap">
-  <button class=" float-right btn btn-green" (click)="openAdd()">Add New</button>
-  <h1>Cost Center Access</h1>
+  <section class="table-heading">
+    <button class=" float-right btn btn-green" (click)="openAdd()">Add New</button>
+    <div class="flex-wrap">
+      <h1>Cost Center Access</h1>
+      <div class="form-group search-box search">
+        <input type="text" class="form-control" [(ngModel)]="searchText" placeholder="Search here...">
+      </div>
+    </div>
+  </section>
   <section class="table-wrap">
     <table class="table table-striped" *ngIf="allCostAccess&&allCostAccess.length>0">
       <thead>
@@ -45,7 +52,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let item of allCostAccess  | orderBy: {property: column, direction: direction}">
+        <tr *ngFor="let item of allCostAccess  | orderBy: {property: column, direction: direction}|filter:searchText">
           <td>{{item.UserId}}</td>
           <td>{{item.user_name}}</td>
           <td>{{item.ChainName}}</td>
