--- a/src/app/featured/dashbord/component/currency/currency.component.html
+++ b/src/app/featured/dashbord/component/currency/currency.component.html
@@ -1,6 +1,14 @@
 <section class="content-wrap">
-  <button class=" float-right btn btn-green" (click)="openAdd()">Add New</button>
-  <h1>Currency</h1>
+  <section class="table-heading">
+    <button class=" float-right btn btn-green" (click)="openAdd()">Add New</button>
+
+    <div class="flex-wrap">
+      <h1>Currency</h1>
+      <div class="form-group search-box search">
+        <input type="text" class="form-control" [(ngModel)]="searchText" placeholder="Search here...">
+      </div>
+    </div>
+  </section>
   <section class="table-wrap">
     <table class="table table-striped" *ngIf="addedCurrency&&addedCurrency.length>0">
       <thead>
@@ -45,7 +53,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let item of addedCurrency  | orderBy: {property: column, direction: direction}">
+        <tr *ngFor="let item of addedCurrency  | orderBy: {property: column, direction: direction}|filter:searchText">
           <td>{{item.id}}</td>
           <td>{{item.CurrencyName}}</td>
           <td>{{item.CurrencySymbol}}</td>
