--- a/src/app/featured/dashbord/component/location/location.component.html
+++ b/src/app/featured/dashbord/component/location/location.component.html
@@ -1,6 +1,13 @@
 <section class="content-wrap">
-  <button class=" float-right btn btn-green" (click)="openAdd()">Add New</button>
-  <h1>Location</h1>
+  <section class="table-heading">
+    <button class=" float-right btn btn-green" (click)="openAdd()">Add New</button>
+    <div class="flex-wrap">
+      <h1>Location</h1>
+      <div class="form-group search-box search">
+        <input type="text" class="form-control" [(ngModel)]="searchText" placeholder="Search here...">
+      </div>
+    </div>
+  </section>
   <section class="table-wrap">
     <table class="table table-striped" *ngIf="addedlocations&&addedlocations.length>0">
       <thead>
@@ -54,7 +61,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let item of addedlocations | orderBy: {property: column, direction: direction}">
+        <tr *ngFor="let item of addedlocations | orderBy: {property: column, direction: direction}|filter:searchText">
           <td>{{item.id}}</td>
           <td>{{item.ChainId}}</td>
           <td>{{item.ChainName}}</td>
