--- a/src/app/featured/dashbord/component/side-navigation/side-navigation.component.html
+++ b/src/app/featured/dashbord/component/side-navigation/side-navigation.component.html
@@ -1,8 +1,8 @@
 <section>
-  <div class="logo">
+  <!-- <div class="logo">
     <img src="{{imageBase}}/assets/img/logo.svg">
     <h6 *ngIf="isSuperAdmin">Super Admin mode</h6>
-  </div>
+  </div> -->
   <ul>
     <li *ngFor="let mainMenu of sideMenuList" class="{{mainMenu.class}}">
       <div *ngIf="mainMenu.sub_menu">
