--- a/src/app/featured/dashbord/component/user/user.component.html
+++ b/src/app/featured/dashbord/component/user/user.component.html
@@ -1,6 +1,13 @@
 <section class="content-wrap">
-  <button class=" float-right btn btn-green" (click)="openAdd()">Add New</button>
-  <h1>User</h1>
+  <section class="table-heading">
+    <button class=" float-right btn btn-green" (click)="openAdd()">Add New</button>
+    <div class="flex-wrap">
+      <h1>User</h1>
+      <div class="form-group search-box search">
+        <input type="text" class="form-control" [(ngModel)]="searchText" placeholder="Search here...">
+      </div>
+    </div>
+  </section>
   <section class="table-wrap">
     <table class="table table-striped" *ngIf="allUsers&&allUsers.length>0">
       <thead>
@@ -63,7 +70,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let item of allUsers | orderBy: {property: column, direction: direction}">
+        <tr *ngFor="let item of allUsers | orderBy: {property: column, direction: direction}|filter:searchText">
           <td>{{item.user_id}}</td>
           <td>{{item.user_name}}</td>
           <td>{{item.user_phone}}</td>
