added side bar functinality

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
   <div class="left-wrap">
     <div class="menu-icon">
-      <img src="../assets/img/menu-icon.png" class="openbtn" onclick="openNav()" alt="">
+      <img src="../assets/img/menu-icon.png" class="openbtn" (click)="openNav()" alt="">
     </div>
     <div class="logo">
       <img src="{{imageBase}}/assets/img/logo.svg">
