--- a/src/app/featured/dashbord/component/home/home.component.html
+++ b/src/app/featured/dashbord/component/home/home.component.html
@@ -1,8 +1,7 @@
-
 <app-header></app-header>
 <div class="main-wrapper">
     <app-side-navigation class="sidebar" id="mySidebar"></app-side-navigation>
-<section class="content-area">    
-    <router-outlet></router-outlet>
-</section>
+    <section class="content-area" id='content-area'>
+        <router-outlet></router-outlet>
+    </section>
 </div>
