added new style changes

--- a/src/app/featured/dashbord/component/company-access/company-access.component.html
+++ b/src/app/featured/dashbord/component/company-access/company-access.component.html
@@ -1,4 +1,6 @@
 <section class="content-wrap">
+  <!-- <button class=" float-right btn btn-green" (click)="openAdd()">Add New</button> -->
+
   <section class="table-heading">
     <!-- <button class=" float-right btn btn-green" (click)="openAdd()">Add New</button> -->
     <div class="flex-wrap">
