--- a/src/app/featured/dashbord/component/side-navigation/side-navigation.component.html
+++ b/src/app/featured/dashbord/component/side-navigation/side-navigation.component.html
@@ -7,7 +7,7 @@
     <li *ngFor="let mainMenu of sideMenuList" class="{{mainMenu.class}}">
       <div *ngIf="mainMenu.sub_menu">
         <a class="nav-link dropdown-toggle" [ngClass]="{'menu-active':mainMenu.isOpen}" (click)="showMenu(mainMenu)">
-          <img src="{{imageBase}}/assets/img/{{mainMenu.img}}">{{mainMenu.name}}
+          <img src="../assets/img/{{mainMenu.img}}" [style.width]="'28px'">{{mainMenu.name}}
         </a>
         <div class="dropdown-menu show" *ngIf="mainMenu.isOpen">
           <a *ngFor="let subMenu of mainMenu.sub_menu" class="dropdown-item {{subMenu.class}}"
@@ -15,7 +15,7 @@
         </div>
       </div>
       <div *ngIf="!mainMenu.sub_menu" (click)="navigate(mainMenu)">
-        <a> <img src="{{imageBase}}/assets/img/{{mainMenu.img}}"> {{mainMenu.name}}</a>
+        <a> <img src="../assets/img/{{mainMenu.img}}" [style.width]="'28px'"> {{mainMenu.name}}</a>
       </div>
     </li>
   </ul>
