--- a/src/app/featured/dashbord/component/popups/add-user-popup/add-user.component.scss
+++ b/src/app/featured/dashbord/component/popups/add-user-popup/add-user.component.scss
@@ -15,8 +15,8 @@
     margin-left: 10%;
 }
 .table-head {
-    background: #fff;
-    color: #000;
+    background: #000;
+    color: #fff;
     padding: 8px;
     text-align: center;
     font-size: 14px;
