--- a/src/app/featured/dashbord/component/popups/add-cost-center-access/add-cost-center-access.component.html
+++ b/src/app/featured/dashbord/component/popups/add-cost-center-access/add-cost-center-access.component.html
@@ -6,7 +6,7 @@
                 <!-- Modal Header -->
                 <div class="modal-header">
                     <h4 class="modal-title">COST CENTER ACCESS</h4>
-                    <img class="btn-close" (click)="popupClose()" src="{{imageBase}}/assets/img/close-icon.svg">
+                    <img class="btn-close" (click)="popupClose()" src="../assets/img/close-icon.svg">
                 </div>
 
                 <!-- Modal body -->
