--- a/src/app/shared/components/add-popup/add-popup.component.html
+++ b/src/app/shared/components/add-popup/add-popup.component.html
@@ -4,7 +4,7 @@
   <form (ngSubmit)="onSubmit()" [formGroup]="form">
     <div class="modal-header">
       <h4 class="modal-title">{{header}}</h4>
-      <img class="btn-close" src="{{imageBase}}/assets/img/close-icon.svg" (click)="popupClose()" />
+      <img class="btn-close" src="../assets/img/close-icon.svg" (click)="popupClose()" />
     </div>
     <!-- Modal body -->
     <div class="modal-body">
