--- a/src/app/shared/components/no-data/no-data.component.html
+++ b/src/app/shared/components/no-data/no-data.component.html
@@ -1,6 +1,6 @@
 <section class="not-found">
     <div class="wrap">
-        <img src="{{imageBase}}/assets/img/error.png" alt="NoData">
+        <img src="../assets/img/error.png" alt="NoData">
         <h3>No Data Avilable</h3>
         <!-- <p>Oops! Something went wrong. Please try again</p> -->
     </div>
