--- a/src/app/featured/authentication/component/login/login.component.html
+++ b/src/app/featured/authentication/component/login/login.component.html
@@ -2,17 +2,18 @@
   <div class="wrapper">
     <form [formGroup]="loginForm" (ngSubmit)="login()">
       <div class="logo-wrap">
-        <img src="{{imageBase}}/assets/img/logo.svg">
+        <img src="../assets/img/logo.svg">
         <h2>LOGIN</h2>
       </div>
       <div class="form-group">
-        <img src="{{imageBase}}/assets/img/email-icon.svg">
+        <img src="../assets/img/email-icon.svg">
+
         <input type="email" class="form-control" placeholder="Email address" formControlName="email"
           [ngClass]="{ 'has-error': isSubmitted && formControls.email.errors }">
       </div>
       <div class="form-group">
-        <img src="{{imageBase}}/assets/img/lock-icon.svg">
-        <input type="password" class="form-control" formControlName="password" placeholder="Password"
+        <img src="../assets/img/lock-icon.svg">
+        <input type="password" matInput class="form-control" formControlName="password" placeholder="Password"
           [ngClass]="{ 'has-error': isSubmitted && formControls.password.errors }">
       </div>
       <button class="btn btn-green">Login</button>
