--- a/src/app/featured/dashbord/component/popups/add-user-popup/add-user.component.html
+++ b/src/app/featured/dashbord/component/popups/add-user-popup/add-user.component.html
@@ -8,7 +8,7 @@
                     <div class="modal-header black-header">
                         <h4 class="modal-title" *ngIf="isEdit">Edit User</h4>
                         <h4 class="modal-title" *ngIf="!isEdit">Add User</h4>
-                        <img class="btn-close" (click)="popupClose()" src="{{imageBase}}/assets/img/close-icon.svg">
+                        <img class="btn-close" (click)="popupClose()" src="../assets/img/close-icon.svg">
                     </div>
 
                     <!-- Modal body -->
