--- a/src/app/featured/dashbord/component/side-navigation/side-navigation.component.html
+++ b/src/app/featured/dashbord/component/side-navigation/side-navigation.component.html
@@ -1,6 +1,6 @@
 <section>
   <!-- <div class="logo">
-    <img src="{{imageBase}}/assets/img/logo.svg">
+    <img src="../assets/img/logo.svg">
     <h6 *ngIf="isSuperAdmin">Super Admin mode</h6>
   </div> -->
   <ul>
