--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -4,17 +4,16 @@
       <img src="../assets/img/menu-icon.png" class="openbtn" (click)="openNav()" alt="">
     </div>
     <div class="logo">
-      <img src="{{imageBase}}/assets/img/logo.svg">
+      <img src="../assets/img/logo.svg">
     </div>
   </div>
   <section class="login">
     <ul>
-      <li class="settings" *ngIf="!isSuperAdmin" (click)="openAdd()"><img
-          src="{{imageBase}}/assets/img/settings-icon.svg"></li>
+      <li class="settings" *ngIf="!isSuperAdmin" (click)="openAdd()"><img src="../assets/img/settings-icon.svg"></li>
       <li *ngIf="!isSuperAdmin" class="user-name">Hello, {{userDetails.user_name}}</li>
       <li *ngIf="isSuperAdmin" class="user-name">Super Admin</li>
-      <li class="user-img"><img src="{{imageBase}}/assets/img/user-img.png" alt=""></li>
-      <li class="logout" (click)="logout()">Logout <img src="{{imageBase}}/assets/img/logout.svg"></li>
+      <li class="user-img"><img src="../assets/img/user-img.png" alt=""></li>
+      <li class="logout" (click)="logout()">Logout <img src="../assets/img/logout.svg"></li>
     </ul>
   </section>
 </header>
